syntax = "proto3";
package user_v1;
option go_package = "github.com/cossim/coss-server/internal/user/api/v1";

//import "google/protobuf/empty.proto";

message UserLogin {
  // @inject_tag: json:"driver_id"
  string DriverId = 1;
  // @inject_tag: json:"token"
  string Token = 2;
  // @inject_tag: json:"user_id"
  string UserId = 3;
  // 设备token 用于推送到指定设备
  // @inject_tag: json:"driver_token"
  string DriverToken = 4;
  // 手机厂商 例如 ios、huawei、xiaomi...
  // @inject_tag: json:"platform"
  string Platform = 6;
  // 登录时间
  // @inject_tag: json:"login_time"
  int64 LoginTime = 7;
}

message DriverIdAndUserId {
  // @inject_tag: json:"driver_id"
  string DriverId = 1;
  // @inject_tag: json:"user_id"
  string UserId = 2;
}


message TokenUpdate {
  // @inject_tag: json:"driver_id"
  string DriverId = 1;
  // @inject_tag: json:"token"
  string Token = 2;
  // @inject_tag: json:"user_id"
  string UserId = 3;
}

message GetUserLoginByTokenRequest{
  // @inject_tag: json:"token"
  string Token = 1;
}

message GetUserDriverTokenByUserIdRequest{
  // @inject_tag: json:"user_id"
  string UserId = 1;
}

message GetUserDriverTokenByUserIdResponse{
  // @inject_tag: json:"tokens"
  repeated string Token = 2;
}

message GetUserLoginByUserIdRequest {
  // @inject_tag: json:"user_id"
  string UserId = 1;
}

message InsertUserLoginResponse{
  // @inject_tag: json:"id"
  uint32 ID = 1;
}

message UserLoginIDRequest {
  // @inject_tag: json:"id"
  uint32 ID = 1;
}

service UserLoginService {
//  rpc InsertUserLogin(UserLogin) returns (InsertUserLoginResponse) {}
//  rpc GetUserLoginByToken(GetUserLoginByTokenRequest) returns (UserLogin) {}
//  rpc GetUserLoginByDriverIdAndUserId(DriverIdAndUserId) returns (UserLogin) {}
//  rpc UpdateUserLoginTokenByDriverId(TokenUpdate) returns (google.protobuf.Empty) {}
//  rpc GetUserDriverTokenByUserId(GetUserDriverTokenByUserIdRequest) returns (GetUserDriverTokenByUserIdResponse) {}
//  // 根据用户ID获取登录信息
//  rpc GetUserLoginByUserId(GetUserLoginByUserIdRequest) returns (UserLogin) {}
//  //根据ID删除登录信息
//  rpc DeleteUserLoginByID(UserLoginIDRequest) returns (google.protobuf.Empty) {}
}